# nrf-softdevice-controller

./: README.md  rust-toolchain.toml
examples/bleps-peripheral/: Cargo.toml  memory.x
examples/bleps-peripheral/.cargo/: config.toml
examples/bleps-peripheral/src/: main.rs
nrf-sdc/: Cargo.toml
nrf-sdc-gen/: Cargo.toml  wrapper.h
nrf-sdc-gen/include/: cmsis_compiler.h  nrf.h
nrf-sdc-gen/src/: main.rs
nrf-sdc-sys/: Cargo.toml  build.rs
nrf-sdc-sys/include/: cmsis_compiler.h  nrf.h  stddef.h
nrf-sdc-sys/src/: bindings.rs  lib.rs
nrf-sdc/src/: lib.rs  mpsl.rs  sdc.rs
nrf-softdevice-controller/: Cargo.toml
nrf-softdevice-controller-sys/: Cargo.toml  build.rs
nrf-softdevice-controller-sys/include/: nrf.h
nrf-softdevice-controller/src/: lib.rs  mpsl.rs  sdc.rs
