[package]
name = "nrf-sdc-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
llvm-tools = { version = "0.1.1", optional = true }

[features]
default = ["llvm-objcopy"]
# default = ["arm-none-eabi-objcopy"]
arm-none-eabi-objcopy = []
llvm-objcopy = ["dep:llvm-tools"]
