[package]
name = "nrf-softdevice-controller-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
regex = "1.10.3"
llvm-tools = { version = "0.1.1", optional = true }

[features]
default = ["llvm-objcopy"]
arm-none-eabi-objcopy = []
llvm-objcopy = ["dep:llvm-tools"]
