[package]
name = "nrf-softdevice-controller-bleps"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52832", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
nrf-softdevice-controller = { path = "../../nrf-softdevice-controller", features = ["defmt"] }
bleps = { path = "../../../bleps/bleps", features = ["async", "macros"]}
embedded-io-async = "0.6"

cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

[profile.release]
debug = 2
