[package]
name = "nrf-sdc-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio", "rt"] }
nrf-sdc-sys = { path = "../../nrf-sdc", features = ["defmt"] }
bleps = { path = "../../../bleps/bleps", features = ["async", "macros"]}
embedded-io-async = "0.6"
embedded-io = "0.6"
uuid = { version = "1.7", default-features = false }

cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
